[package]
name = "app"
version = "1.0.0"
authors = ["Greg Kapka <greg@kapka.co.u>"]
build = "build.rs"

[dependencies]
dirs = "1.0.2"
lazy_static = { version = "1.1.0", features = ["spin_no_std"] }
sgx_urts = { git = "https://github.com/baidu/rust-sgx-sdk.git" }
sgx_types = { git = "https://github.com/baidu/rust-sgx-sdk.git" }

[patch.'https://github.com/baidu/rust-sgx-sdk.git']
sgx_urts = { path = "../../../sgx_urts" }
sgx_types = { path = "../../../sgx_types" }
